--- a/marks.html
+++ b/marks.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Shoppingdiscount</h1>
- <script src="shoppingdiscount.js"></script>   
+    <script src="marks.js"></script>
 </body>
 </html>
