--- a/revision.html
+++ b/revision.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>even odd checker</title>
 </head>
 <body>
-    <script src="revision.js"></script>
+ <h1>even odd counter using javascript</h1>
+ <script src="revision.js"></script>
 </body>
 </html>
